[KOA-4701]: New relative alignment fixes for navigation bar

--- a/packages/bpk-component-navigation-bar/src/BpkNavigationBar.module.scss
+++ b/packages/bpk-component-navigation-bar/src/BpkNavigationBar.module.scss
@@ -25,6 +25,7 @@
   padding: $bpk-spacing-sm;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 
   @include bpk-themeable-property(
     background-color,
